k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-order-billing-service
  namespace: service-order
  labels:
    app: service-order-billing-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-order-billing-service
  template:
    metadata:
      labels:
        app: service-order-billing-service
    spec:
      containers:
        - name: api
          image: __API_IMAGE__
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
